--- a/manuscript/page-51/body.haml
+++ b/manuscript/page-51/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
   .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
