--- a/manuscript/page-55/body.haml
+++ b/manuscript/page-55/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
+  .chaptername.right Seeding, Growing and Scaling a Marketplace
   .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
 
 %main.leaf.flex
   .inner.justify
@@ -11,8 +11,3 @@
     %p For example, Etsy has done an incredible job driving loyalty and repeat usage. As reported in its 2016 Annual Report, a large and growing number of Etsy buyers have made purchases on two or more days within the year. (See overleaf)
 
 
-
-Etsy’s Active Buyers by Purchase Type
-Source: Etsy, 2016 Annual Report
-Uber and Lyft have been able to lock in customer mindshare by becoming a home screen app on customer’s mobile phones. In the age of mobile where long-tail discovery (whether paid or organic) is less important, becoming a home screen app is critical. This trend is even stronger in those countries that have skipped the desktop altogether and gone straight to mobile.
-If buyer mindshare is the key to building a moat against the competition, you need to have the right product mix to become a frequent destination for your customers. Then employ an aggressive mobile strategy to get on the home screen of as many buyers in your target group as possible.
