--- a/manuscript/page-56/body.haml
+++ b/manuscript/page-56/body.haml
@@ -4,9 +4,12 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %img.overlay{src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background28.jpg", width: "100%"}
+    %label.center
+      %p.caption Etsy’s Active Buyers by Purchase Type, Source: Etsy, 2016 Annual Report
+    %p 
+      Uber and Lyft have been able to lock in customer mindshare by becoming a home screen app on customer’s mobile phones. In the age of mobile where long-tail discovery (whether paid or organic) is less important, becoming a home screen app is critical. This trend is even stronger in those countries that have 
+      %a{ href: "http://www.zdnet.com/article/why-indias-flipkart-abandoned-its-mobile-website/"} skipped the desktop&nbsp;
+      altogether and gone straight to mobile.
+    %p If buyer mindshare is the key to building a moat against the competition, you need to have the right product mix to become a frequent destination for your customers. Then employ an aggressive mobile strategy to get on the home screen of as many buyers in your target group as possible.
+
