--- a/manuscript/page-59/body.haml
+++ b/manuscript/page-59/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p A transaction fee model also scales nicely: the more sales your platform generates, the more revenue you bring in.
+    %p By contrast, listing fees can have the opposite effect. Charging suppliers to list on your site will inevitably discourage some from listing. You might find your marketplace soon hits a ceiling where you can’t get any new suppliers to join. In addition, this model is less fair than transaction fees as listing fees hit all vendors equally — no matter how many sales they end up making on the site.
+
+    %p However, there are upsides to listing fees. They assure some level of quality control for a better end user/buyer experience. When sellers need to pay to list, they are more likely to list items with a high chance of selling, as well as invest time in each listing. In other words, you won’t have to worry about providers flooding your marketplace with low quality products and listings.
