--- a/manuscript/page-60/body.haml
+++ b/manuscript/page-60/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h3.center ENHANCED SELLER SERVICES
+    %p A recent trend has been for marketplaces to monetize by charging for optional seller services. In this case, you can make the base listing free and charge for enhanced services like better placement. The low entry cost encourages more suppliers to list (increasing liquidity), but revenue can be hard to come by since only a small percentage of suppliers will choose to pay for the better placement.
+    %p Such a freemium approach works best for companies that serve a huge market. Even if just a small percentage of suppliers pay for additional seller services, their base is so big that they can build a large business (e.g. Yelp). However, if you are tackling a niche market, you’ll never reach the scale necessary for a freemium model to work as the core source of revenue.
+    %p If we analyze Etsy’s 2016 Annual Report, we see that the company’s premium seller services are growing much faster than base transaction fees. Seller services cater toward the marketplace’s power sellers: promoted listings, direct checkout, shipping labels, etc. Revenue from these seller services overtook general marketplace transaction fees in 2015.
+
