--- a/manuscript/page-61/body.haml
+++ b/manuscript/page-61/body.haml
@@ -1,12 +1,19 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+
+    %label.center
+      %p 
+        %strong.caption Etsy’s Annual Revenue Breakdown:
+      %p 
+        %strong.caption Seller Services Revenue Overtakes Transaction Fees in 2015
+    %img.overlay{src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background31.jpg", width: "100%"}
+    %label.center
+      %p.caption 
+        Etsy’s Active Buyers by Purchase Type, Source: Etsy, 
+        %a{href: "https://investors.etsy.com/~/media/Files/E/Etsy-IR/annual-report-proxy-materials/etsy-ar2016.pdf"} 2016 Annual Report
+
+    %p Since the average Etsy seller is too small to worry about fulfillment efficiency, these enhanced services take a higher rate from Etsy’s power users. This approach works very well for the company and community. By relying less on monetizing the smaller sellers, Etsy ensures that small sellers can afford to stay on the platform and contribute their unique inventory that buyers want. Etsy then takes a higher rate from the big sellers that can most afford it due to their scale.
