--- a/manuscript/page-64/body.haml
+++ b/manuscript/page-64/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h3.center SUBSCRIPTION FEES
+    %p While most marketplaces extract a fee from their sellers, a few charge subscription fees to their buyers. Angie’s List and Care.com are the most notable examples.
+    %p Angie’s List charges buyers a membership fee in order to search the directory and view ratings. They also charge advertising fees to the seller.
+    %p Care.com has a freemium model, with value-added services on both sides of the marketplace. Families (buyers) need to pay a subscription fee to message a caregiver through the platform. Until you pay, identities are masked. Paying caregivers can move up in the search results, provide a preliminary background check, and get “priority notification” of opportunities.
+    %p Care.com’s IPO prospectus offers a detailed look at their free and premium services. The starred features represent paid/premium services.
