--- a/manuscript/page-69/body.haml
+++ b/manuscript/page-69/body.haml
@@ -1,12 +1,12 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right New marketplace types
+  .chapter.flex Chapter 4
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 New marketplace types
+    %p At their core, every marketplace is similar. On one side, there’s a seller (supply), on the other side a buyer (demand). The marketplace acts as an intermediary to bring these two sides together. But there can be a lot of innovation in how a marketplace handles these transactions, takes care of its seller and buyer communities, and approaches monetization.
+    %p As the industry matures, we’re seeing new marketplace models emerge, including on-demand, managed, community-driven, SaaS-enabled, and decentralized. Here’s a quick look at each kind.
+    %h3.center
+      ON-DEMAND MARKETPLACES (E.G. UBER, LYFT, ZEEL)
+    %p The widespread use of smartphones has helped create a consumer culture that’s conditioned to expect anything and everything on-demand. With the “uberification” of many different markets and services, the smartphone has turned into a remote control that can summon anything from cookies to legal services.
