--- a/manuscript/page-70/body.haml
+++ b/manuscript/page-70/body.haml
@@ -1,12 +1,9 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 4
+  .chaptername New marketplace types
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p These on-demand marketplaces match jobs with independent contractors on the fly, supplying labor service or products on demand. For example, there’s Instacart to buy and deliver groceries, TaskRabbit for odd jobs, and the list continues.
+    %p In many ways, today’s on-demand economy is a continuation of the sharing economy, or collaborative consumption — exemplified by Airbnb, where people turn their underused assets (i.e. home, bed, car, etc.) into a source of revenue. Now, with on-demand services, people aren’t renting out their assets, but instead their spare time.
+    %p While entrepreneurs and investors were once excited by the massive opportunity, it’s important to realize that the on-demand service model that lifted Uber’s valuation to a high of $70B won’t work for every vertical. In many cases, the hype once driving on-demand marketplaces has come and gone.
