--- a/manuscript/page-72/body.haml
+++ b/manuscript/page-72/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 4
+  .chaptername New marketplace types
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "2" }  
+      %li  
+        %p With high frequency use cases, customers fall into the habit of using the same service as long as they’re satisfied. This makes it easy for a startup to become the “home screen app” for that particular use case. By contrast, it is much harder to retain customer mindshare with lower purchase frequencies. If customers need a yard cleanup just two times a year, they’re more likely to begin the research process over again each time.
+      %li
+        %h6 True on-demand use case
+        %p Many of the services that fall into the on-demand mobile services category aren’t actually “on- demand.” In most cases you don’t need a cleaning service or house painter to show up within minutes, or even the same day. But, taxis are a different story.
+        %p A true on-demand marketplace requires sufficient liquidity on the supply side. Without enough available drivers in a car service marketplace, customers will be left waiting on the curb.
+        %p This creates a large barrier to enter the market, since a new competitor needs to launch with hundreds of providers, not just a handful.
