--- a/manuscript/page-76/body.haml
+++ b/manuscript/page-76/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 4
+  .chaptername New marketplace types
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p
+      The company considered taking on these tasks to help out their sellers, but were advised against taking any inventory. It was too risky, complex, and expensive for such small ticket items. However, thredUP understood how much their sellers needed these service and went ahead with a managed model. People can order a bag, throw their things in, and thredUP takes care of the rest. After switching to a managed model, their business took off again. Inventory quality and variety has improved, making the marketplace more attractive to buyers.
+    %p The takeaway? Sometimes it’s okay to deviate from conventional wisdom. thredUP listened to what their users needed and delivered on those needs (and only those needs — you don’t want to add costs by taking on more than what’s necessary).
+    %p The core question is: how much value can you unlock by managing parts of the marketplace value without raising the risk profile too much?      
