--- a/manuscript/page-78/body.haml
+++ b/manuscript/page-78/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 4
+  .chaptername New marketplace types
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h2.center COMMUNITY-DRIVEN MARKETPLACES
+    %p Some marketplaces leverage the community of buyers and sellers to create a unique differentiator. Here, buyers and sellers visit the marketplace not just to complete a transaction, but also for a sense of identity and belonging. They meet and form communities with others who have similar interests.
+    %p Etsy is a prime example of a marketplace that has built a business around community and culture. From Etsy’s 10th anniversary blog: “Over time, Etsy has come to represent something even more powerful: an alternative to traditional commerce and a different, people-centered model for doing business.” Etsy calls itself more than a marketplace: “we’re a community of artists, creators, collectors, thinkers and doers.”
+    %p To support their community, Etsy added team functionality to its marketplace, letting users (sellers and buyers) create and join teams around shared interests. They also host official craft nights in Brooklyn and other local meetups.
