--- a/templates/style.scss
+++ b/templates/style.scss
@@ -124,6 +124,11 @@ a {
   text-transform: uppercase;
 }
 
+.caption{
+  font-size: 70%;
+  font-style: italic;
+}
+
 .tape {
     height: 5vh;
     width: 100%;
