--- a/manuscript/page-57/body.haml
+++ b/manuscript/page-57/body.haml
@@ -1,12 +1,12 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 FINDING THE RIGHT BUSINESS MODEL FOR YOUR MARKETPLACE
+    %p Many entrepreneurs come up with a great idea for a marketplace, but then fail to find the right business model that will translate their activity into profits. The challenging part of monetizing a marketplace is that buyers and sellers are looking to complete transactions with one another, and fees introduce friction to the process. Whichever party is charged a fee will naturally try to conduct the transaction off-platform whenever possible.
+    %p Finding the right business model depends entirely on the characteristics of your market:
+    %ul
+      %li If customers are comfortable buying products/services over the marketplace with little back and forth, then seller transaction fees (complemented with additional seller services) are most likely the way to go.
+      %li If the marketplace acts purely like the classifieds (no transactions), listing fees make more sense.
