--- a/manuscript/page-58/body.haml
+++ b/manuscript/page-58/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p In general most marketplaces take fees from their sellers — either through listing fees, lead generation fees, or transaction fees. The primary reason for monetizing the seller is simple: after you’ve seeded the marketplace with initial supply, demand becomes the limiting factor for marketplace growth. Charging buyers creates friction and limits their participation.
+
+    %p In this chapter, we’ll look at several of the most common monetization models: transaction fees, listing fees, end-user/buyer subscriptions, and seller services. We’ll also discuss how to find the right pricing/rake scheme.
+
+    %h3 TRANSACTION FEES VS. LISTING FEES
+    %p Let’s start with the transaction fee, where the marketplace takes a cut of each transaction generated through the platform. It’s the fairest monetization model for suppliers and vendors, as they only pay a fee if and when they sell something.
+
+    %p This model encourages more suppliers to join the platform and thus increases the liquidity of the marketplace’s supply for two reasons: first, when you take away the upfront fee it’s easier to join, and second, if you only charge when a sale is made, you decrease the supplier’s risk of losing money. 
