--- a/manuscript/page-62/body.haml
+++ b/manuscript/page-62/body.haml
@@ -1,12 +1,12 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p This strategy means that Etsy doesn’t have to choose between unique inventory and monetization. They keep competitors at bay (because there’s no reason for the small sellers to leave) while growing the company’s take rate and revenues.
+
+    %h3.center WHAT TO DO WHEN SERVICES ARE DELIVERED OFFLINE?
+    %p A business model based on transaction fees seems like the simplest and most effective approach for any marketplace. However, it’s hard to pull off when the service is delivered offline.
+    %p For example, Thumbtack is a platform that helps people find service professionals (photographers, painters, home contractors, movers, etc.). They started with a transaction fee model. But when a plumber goes to a customer’s house to fix a leaky faucet, it’s hard for Thumbtack to know when the service was performed and for how much. That makes charging by transaction fees tricky.
+    %p Furthermore, when a marketplace connects the buyer and seller before facilitating the transaction, it weakens the marketplace’s ability to capture value.
