--- a/manuscript/page-63/body.haml
+++ b/manuscript/page-63/body.haml
@@ -1,12 +1,9 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Thumbtack pivoted to a lead-based model: they make money by charging suppliers to contact customers. Vendors see all the details for a particular job (what, when, where) and if they feel they are a good fit, they pay Thumbtack to be introduced to compete for the job. Keep in mind that the lead-based model only works with new connections (i.e. discovery). It’s ineffective in those cases where there’s a lot of repeat purchases from the same vendor.
+    %p In addition to a lead generation revenue model, there are some other strategies for service marketplaces. One approach is to stay as close to the transaction as possible. Elance offers hourly/project tracking and billing solutions that encourage both the provider (freelancer) and the customer to stay on the platform throughout the transaction.
+    %p The other approach is to productize the service as much as possible, with boxed offerings that include pre-defined scope, duration, pricing, deliverables, etc. This simplifies the end user experience, enabling them to complete a transaction in just a few clicks. The less back and forth between provider and customer, the more likely they are to complete the transaction on platform.
