--- a/manuscript/page-65/body.haml
+++ b/manuscript/page-65/body.haml
@@ -1,12 +1,19 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+
+    %img.overlay{src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background33.jpg", width: "100%"}
+    %label.center
+      %p.caption 
+        Care.com: Breakdown of free and paid/premium services, Source: 
+      %p.caption         
+        %a{href: "https://www.sec.gov/Archives/edgar/data/1412270/000104746913011159/a2217607zs-1.htm"} Care.com IPO Prospectus
+
+
+    %p There are a few risks with the subscription model:
+    %ul
+      %li Charging buyers can limit the number of potential customers who join your site. Your value proposition needs to be very strong to entice consumers to pay a subscription in order to buy a product or service.
+      %li There’s also the question of how long any buyer will remain a paying subscriber. Unlike a SaaS app which can be continually useful, the lifespan of a marketplace’s utility can be rather limited. 
