--- a/manuscript/page-66/body.haml
+++ b/manuscript/page-66/body.haml
@@ -1,12 +1,25 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Once a subscriber finds a provider they like (whether it’s a doctor or babysitter), they may not look for another provider for years.
+    %p 
+      Care.com expressed this challenge in their 
+      %a{href: "http://www.sec.gov/Archives/edgar/data/1412270/000104746913011159/a2217607zs-1.htm"} prospectus:&nbsp;
+    %blockquote
+      %em
+        Currently, most of our paid memberships are monthly memberships, and the average paid membership length for our consumer matching solutions is approximately seven months. As a result, we must regularly replace paying members who allow their membership to lapse with new paying members either by converting existing non-paying members or by attracting new members to our service.
+
+    %h3.center FINDING THE RIGHT PRICING STRATEGY
+    %p 
+      Bill Gurley’s article 
+      %a{href: "http://abovethecrowd.com/2013/04/18/a-rake-too-far-optimal-platformpricing-strategy/"} “A Rake Too Far: Optimal Platform Pricing Strategy”&nbsp;
+      is recommended reading for any startup trying to determine their pricing strategy. 
+    %p
+      He begins by saying:
+    %blockquote
+      %em
+        It may seem tautological that a higher rake is always better – that charging more would be better than charging less. But in fact, the opposite may often be true. The most dangerous strategy for any platform company is to price too high – to charge a greedy and overzealous rake that could serve to undermine the whole point of having a platform in the first place.
+
