--- a/manuscript/page-67/body.haml
+++ b/manuscript/page-67/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right Finding the right business model for your marketplace
+  .chapter.flex Chapter 3
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p
+      What’s the problem with levying too high a fee? First, as Gurley explains, if you charge an excessive rate, that cost ultimately gets passed along to the consumer and the “pricing of items in your marketplace are now unnaturally high.” Second, high rakes give suppliers a reason to look elsewhere and you become vulnerable to competitors from below. 
+    %p
+      Here’s a telling example: in the late 1990s companies like Expedia and Travelocity were the online travel leaders in Europe, and they took a rake over 30% with certain packages. This left an opening for Booking.com (part of Priceline Group) to come in with a lower 10% rake and sign up nearly every small hotel in Europe. This resulted in greater supply and selection for consumers – and Booking.com is the undisputed leader today.
+    %p What’s even more interesting is that the average rake at Booking.com is higher today since merchants bid up their rake for better placement, similar to the Google Ads model.
