--- a/manuscript/page-68/body.haml
+++ b/manuscript/page-68/body.haml
@@ -1,12 +1,7 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 3
+  .chaptername Finding the right business model for your marketplace
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Just like with Etsy’s Premium Seller Services model, this approach offers the best of both worlds: low starting fees that encourage broad supplier adoption (and supply liquidity) along with added revenue from those suppliers who want more exposure, or whatever other enhanced services you offer. You won’t turn anyone away due to high fees, but can still boost your take as suppliers compete with one another.   
