--- a/manuscript/page-71/body.haml
+++ b/manuscript/page-71/body.haml
@@ -1,12 +1,16 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right New marketplace types
+  .chapter.flex Chapter 4
+
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p The service marketplaces that have been able to break through and continue to scale follow three key principles:
+    %ol
+      %li 
+        %h6 Underlying Commoditized Services
+        %p When it comes to hiring a ride, most of us are happy as long as a driver brings us from Point A to Point B in a clean car without getting lost. This makes us pretty flexible in terms of who delivers the service. For more complex services — e.g. haircuts, babysitting, and legal/medical advice — it’s harder for customers to accept the idea that somebody at random will show up each time. We develop preferences, and like to stick with one provider once they earn our trust.
+      %li
+        %h6 High purchase frequency
+        %p The best marketplaces have high purchase frequency and regular usage. For city dwellers and frequent travelers, taxis are used on a daily, or at least weekly, basis. Few other services have such a high purchase frequency. On top of this, Uber also enjoys significant spillover effects as travelers move from one location to another.
+        .right [contd.]
