--- a/manuscript/page-73/body.haml
+++ b/manuscript/page-73/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right New marketplace types
+  .chapter.flex Chapter 4
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p By contrast, when services can be delivered with more flexible timing, it’s easier for competitors to enter a vertical or new location and there’s less of a winner takes all dynamic. As such, we can expect just one or two major players for a true on-demand service, while less time-sensitive markets will be crowded with smaller companies.
+
+
+    %h3.center MANAGED MARKETPLACES
+    %p Over the past few years, we’ve seen the emergence of managed marketplaces. These are marketplaces that don’t just connect buyers and sellers, but take on additional parts of the value chain to deliver a better overall experience. With startups like thredUP, Luxe, Opendoor, and Real Real, managed marketplaces have been a hot category for VC investment.
+    %p 
+      These types of marketplaces can be game-changers in their categories, particularly when dealing with high-value ticket items. By adding managed services, marketplaces can create new demand by helping buyers overcome the trust issues associated with most peer-to-peer marketplaces. 
+      There’s a big difference in trust levels when looking for elder-care services on a managed marketplace like Honor versus searching on Craiglist. 
