--- a/manuscript/page-74/body.haml
+++ b/manuscript/page-74/body.haml
@@ -1,12 +1,19 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chapter.flex Chapter 4
+  .chaptername New marketplace types
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p 
+      As 
+      %a{href: "https://medium.com/@ai/the-evolution-of-managed-marketplaces-3382290963b2"}&nbsp;Anand Iyer&nbsp;
+      wrote, trust, safety, and risk management are basically tables stakes now for a managed marketplace: “what draws most consumers to a managed marketplace is how the marketplace manages trust.”
+    %p 
+      Borrowing from Ezra Galston’s 
+      %a{ href: "https://techcrunch.com/2017/05/25/anatomy-of-a-managed-marketplace/"}&nbsp;“Anatomy of a Managed Marketplace”&nbsp;
+      and Anand Iyer’s 
+      %a{ href: "https://techcrunch.com/2017/05/25/anatomy-of-a-managed-marketplace/"}&nbsp;“The Evolution of Managed Marketplaces,”&nbsp;
+      we believe that managed marketplaces share three key characteristics:
+
+    %ul
+      %li The managed marketplace takes on additional parts of the value chain (beyond just connnecting buyers and sellers) to provide a superior experience versus more traditional peer-to-peer marketplaces. In many cases, the end user experience is a core differentiator — where end users can be buyers, sellers, or both. For example, by adding concierge and logistics support, a marketplace can entice sellers of luxury items who may not have been inclined to go through the time and trouble to list their items on a marketplace previously.
