--- a/manuscript/page-75/body.haml
+++ b/manuscript/page-75/body.haml
@@ -1,12 +1,11 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right New marketplace types
+  .chapter.flex Chapter 4
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ul
+      %li A managed marketplace can involve considerable risk involved — for example, should you guarantee the sale and take on sellers’ inventory. If economic conditions worsen rapidly, such as the “overnight recession” in 2008, you’ll end up sitting on inventory that’s impossible to move.
+      %li Lastly, a managed marketplace can have a higher take rate than a pure marketplace that just connects buyers and sellers. This can offset the premium service offerings and added risk.
+    %p
+      thredUP offers an interesting case study in finding the right managed model. thredUP works with a lot of children’s and mom’s clothing — not exactly big ticket items. It’s a great market opportunity for re-sale, because as any parent knows, it’s easy to over-spend on kids clothing and items are worn for only one season (or less). Moms were taking photos and cataloging their clothing, but soon they didn’t want to do it any more. Photographing clothes is a hassle.
