--- a/manuscript/page-77/body.haml
+++ b/manuscript/page-77/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 2
-  .chaptername Seeding, Growing and Scaling a Marketplace
+  .chaptername.right New marketplace types
+  .chapter.flex Chapter 4
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h4 Managed Marketplaces: Who sets the pricing?
+    %p Another element of a managed marketplace is when the platform itself sets the pricing, instead of the sellers. In a traditional marketplace, sellers define their own prices. A great example is Sidecar vs. Uber/Lyft where these ride-sharing companies adopted different pricing strategies to target a different consumer segment.
+    %p Uber and Lyft standardized their pricing and service offerings. Consumers simply push a button and a car shows up. Every Uber driver will charge you the same rate to take you from Point A to Point B. By contrast, Sidecar drivers set their own rates. 
+    %p You had a better chance of finding a cheaper ride with Sidecar, but you needed to spend time browsing through a lot of choices (lowest fees, larger cars, etc.) in order to find what you want. Ultimately, Sidecar’s “Wild West” model failed — letting supply set a price for a commoditized, undifferentiated service just doesn’t make sense.    
