--- a/manuscript/page-86/body.haml
+++ b/manuscript/page-86/body.haml
@@ -1,12 +1,16 @@
 %header.tape.flex
-  .chapter.flex Chapter 4
-  .chaptername New marketplace types
+  .chapter.flex Chapter 5
+  .chaptername Marketplace Metrics
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 MARKETPLACE METRICS
+    %p As you grow, it’s important to understand how the business is performing: if your model is financially viable, what’s working well, and what needs to be changed. But traditional business metrics and KPI dashboards don’t necessarily capture the key factors that drive marketplace performance and health.
+    %p Christoph Janz at Point Nine Capital created a KPI dashboard for early-stage SaaS. Inspired by this, we have put together a KPI template for marketplaces.
+    %p 
+      You can access the Marketplace KPI Template via the 
+      %a{href: "https://docs.google.com/spreadsheets/d/1K5E1Nzjq4KEvGVv6EysGswTuQm5u21Sa2ugSZewrZqE/edit#gid=1569059121"}&nbsp;Google doc here&nbsp;
+      (make a copy of it and then you can edit away). 
+      Special thanks to Vijay Nagappan of MHS Capital for bringing the KPI template to life and 
+      %a{href: "http://www.batting399.com/post/126915896445/kpis-dashboards-must-haves-for-early-stage"}&nbsp;visualizing these KPIs&nbsp; 
+      using Plot.ly and Keen.io dashboards. Vijay created four starter dashboards for summary, supplier side, demand side, and then a mashup of supplier side and demand side data to see if there are any interesting trends. 
