chapter 6 in place

--- a/manuscript/page-87/body.haml
+++ b/manuscript/page-87/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
+  .chaptername.right Marketplace Metrics
   .chapter.flex Chapter 5
-  .chaptername Marketplace Metrics
 
 %main.leaf.flex
   .inner.justify
