--- a/manuscript/page-89/body.haml
+++ b/manuscript/page-89/body.haml
@@ -1,4 +1,7 @@
-%iframe{src: "https://docs.google.com/spreadsheets/d/1K5E1Nzjq4KEvGVv6EysGswTuQm5u21Sa2ugSZewrZqE/edit#gid=1569059121", width: "200%", height: "100%" }
+%header.tape.flex
+  .chaptername.right Marketplace Metrics
+  .chapter.flex Chapter 5
+
 
 %div.message
   Our Marketplace KPI Dashboard, available for download 
