--- a/manuscript/page-94/body.haml
+++ b/manuscript/page-94/body.haml
@@ -4,9 +4,13 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p 
+      %strong Supply Liquidity (measured as a percentage):&nbsp;
+      %a{href: "http://platformed.info/online-marketplace-metrics/"} Sangeet Paul Choudary&nbsp;
+      defines supply liquidity as “the percentage of listings that lead to transactions within a certain time period.” Sharetribe’s 
+      %a{href: "https://www.sharetribe.com/academy/measure-your-success-key-marketplace-metrics/"} Marketplace Academy 
+      outlined some examples for how supply liquidity can be calculated: On Etsy, it is the proportion of total stock sold in a given time period (probably one month). On Airbnb, it’s measured daily: how large a proportion of rooms are booked each night. And on Uber, you might need to measure it hourly: how big a percentage of drivers that are on duty are driving a customer at any given hour (how many logged-on drivers in a given time period get rides).
+    %p Note: The percentage of listings that lead to transactions within a certain time period serves as a proxy for the efficiency of the marketplace. Merely increasing the number of buyer and seller sign-ups doesn’t serve a purpose unless this metric starts rising.
+    %p 
+      %strong Customer Liquidity:&nbsp;
+      This is the probability of a visit leading to a transaction. Simon Rothman believes that a conversion range of 30-60% is a reasonable expectation (not counting people who bounce). 
