--- a/manuscript/page-89/style.scss
+++ b/manuscript/page-89/style.scss
@@ -1,7 +1,10 @@
-iframe {
-	position: absolute;
-	right: 0;
-	top: 0;
+body {
+	margin-top: 10vh;
+	height: 90vh;
+	width: 100vw;
+	background-image: url(https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/xl.jpg);
+	background-size: 200% 100%;
+	background-position: right center;
 }
 
 .message {
@@ -9,7 +12,7 @@ iframe {
 	padding: 2vw;
 	width: 60vw;
 	position: absolute;
-	top: 50vh;
+	top: 40vh;
 	right: 0;
 	background: rgba(0, 100, 255, 0.7);
 	color: white;
