--- a/manuscript/page-90/body.haml
+++ b/manuscript/page-90/body.haml
@@ -4,9 +4,10 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h3 1. Overall Marketplace Metrics
+    %p Gross merchandise volume (GMV) is the total sales dollar value for goods sold or services purchased through the marketplace over a certain time. Given that GMV is one of the most important marketplace KPIs, founders should track its growth rate on a monthly and yearly basis, and understand its makeup by customer acquisition channel. With GMV and the total number of transactions, we can compute the average order value (AOV) since:
+    %p GMV = # of Transactions * AOV
+    %p Revenue is the income that the company receives from facilitating connections in the marketplace. It comes in the form of transaction fees, listing fees, and/or the offering of premium seller/supplier services. With revenue and GMV, we can calculate take rate via:
+    %p
+      Revenue = GMV * Take Rate
+    %p In addition to take rate, we can evaluate business efficacy by calculating the total customer acquisition cost (CAC) of buyers and sellers/suppliers as a percentage of revenue.
