--- a/manuscript/page-100/body.haml
+++ b/manuscript/page-100/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
-  .chapter.flex Chapter 6
-  .chaptername Marketplace Tools
+  .chapter.flex Chapter 7
+  .chaptername Working With Investors
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p While some of the specific details may vary based on market (Headout is a travel/experience oriented marketplace), any founder can use this as a primer for building out his or her own metrics. As you can imagine, there are many more questions to ask but these serve as a good conversation starter between Version One and the entrepreneurs we meet, helping us develop a stronger thesis faster.
+    %h5 On buyers (e.g. travellers/tourists):
+    %ul
+      %li How do you define engagement? What does your engagement pyramid or conversion funnel look like (e.g. % of users who download app, browse your app, purchase based on overall signups or relative to previous activity)?
+      %li How do you identify your most engaged users? Have you been able to identify common traits of power users (e.g. perhaps a demographic breakdown)?
+      %li What is the average time spent on the app on the whole, and on a per-activity basis?
+      %li Do you have a weekly or monthly cohort analysis that you can share? What is your DAU and/or MAU?
+      %li What is the average spend per user? Are users sensitive to price?
