--- a/manuscript/page-97/body.haml
+++ b/manuscript/page-97/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
+  .chaptername.right Marketplace Tools
   .chapter.flex Chapter 6
-  .chaptername Marketplace Tools
 
 %main.leaf.flex
   .inner.justify
