--- a/manuscript/page-98/body.haml
+++ b/manuscript/page-98/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
-  .chapter.flex Chapter 6
-  .chaptername Marketplace Tools
+  .chapter.flex Chapter 7
+  .chaptername Working With Investors
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 Working With Investors
+    %p Two of the most frequently asked questions at any startup event or investor panel, are “What do investors look for in a marketplace startup?” and “How to investors value a startup?” While answering these questions is often more art than science, we’ll shed some light on how we evaluate companies at Version One.
+    %h3 WHAT DO INVESTORS LOOK FOR IN A MARKETPLACE?
+    %p As mentioned earlier, Bill Gurley outlined a list of 10 factors to consider when evaluating marketplaces. If you haven’t read his post already, we strongly encourage you to do so.
+    %p And, as we mentioned in Chapter 1, the six most important factors for us are:
+    %ul
+      %li High fragmentation
+      %li Regular frequency of use/purchase
+      %li Discovery/new buyer-seller relationships (vs. monogamy)
