--- a/manuscript/page-99/body.haml
+++ b/manuscript/page-99/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
-  .chapter.flex Chapter 6
-  .chaptername Marketplace Tools
+  .chaptername.right Working With Investors
+  .chapter.flex Chapter 7
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ul
+      %li Total Available Market
+      %li Transactional (being part of the payment flow)
+      %li Ability to expand the overall market
+
+    %p These aren’t the only factors that lead to success. For instance, other VCs feel that a marketplace with less frequency of purchase can be offset by a high AOV. However, for us, these six points create the foundation of our thesis and we’re more likely to dive into a startup’s data if we’re aligned at this higher level.
+    %h5 What type of traction do we want to see in order to invest?
+    %p The answer is, “it depends.” Every startup is different and we conduct our due diligence on a case-by-case basis. Yet, with that said, there is a general set of questions we use to evaluate the dynamics of a marketplace and assess a startup’s product-market fit.
+    %p Using our portfolio company Headout as an example, here’s a sampling of questions we may ask a potential marketplace startup. You’ll see that many of these questions are inspired by the metrics/KPI data we discussed in Chapter 5.
