--- a/manuscript/page-107/body.haml
+++ b/manuscript/page-107/body.haml
@@ -1,6 +1,8 @@
 %header.tape.flex
+  .chaptername.right Working With Investors
   .chapter.flex Chapter 7
-  .chaptername Working With Investors
+
+
 
 %main.leaf.flex
   .inner.justify
