Image sized up correctly

--- a/manuscript/page-104/body.haml
+++ b/manuscript/page-104/body.haml
@@ -4,9 +4,11 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Ultimately, we invest in smart founders — ones who are incredibly passionate, ambitious, and talented. But these founders are also data-driven, no matter how early the company is. We want to know that an entrepreneur has a good hold on all KPIs, i.e. the knobs and levers that he or she can turn and pull in order to engage users and scale the business. In fact, the founders we have been most impressed with have been able to present their data quickly and communicate insights clearly.
+    %h5 HOW DO INVESTORS DETERMINE VALUATION MULTIPLES FOR MARKETPLACES?
+    %p The main multiple we like to use for marketplace businesses is GMV. Our rule of thumb is that marketplaces at scale are valued at roughly 1x annualized GMV (typically about 6-8x annual revenue). These are for marketplaces that are growing fast and are category leaders.
+    %p Our assumptions for this valuation:
+    %ul
+      %li Scale: > $1b GMV
+      %li YoY growth of at least 30%
+      %li Take rate of about 10-15%
