--- a/manuscript/page-106/body.haml
+++ b/manuscript/page-106/body.haml
@@ -4,9 +4,9 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Etsy had a market cap of about $1.86B as of July 13, 2015 with a revenue multiple of 6.8 and a GMV multiple of 0.76. But note that its GMV multiple was as high as 1.7 immediately following its IPO.
+    %p Bessemer offers a good overview of current valuations for different business models: SaaS, marketplaces, consumer, and e-commerce. You can see in their chart above that marketplaces get some of the highest revenue multiples because of their operational leverage and high defensibility at scale.
+    %p While there’s certainly a lot of enthusiasm surrounding marketplace valuations, it’s important to realize that there’s a large (and potentially sobering) disconnect between the valuations for public and private consumer marketplaces. This fact was recently pointed out by Mahesh Vellanki of Redpoint Ventures, after he took a deep look into six metrics for marketplaces, including enterprise value, revenue multiples, and revenue growth. 
+    %p His conclusion:
+    %blockquote
+      %em What I see are large scale, profitable and fast growing marketplace businesses in exciting markets that are worth shockingly little relative to private comps. I’m both excited and scared to see how things will shake out.
