--- a/manuscript/page-109/body.haml
+++ b/manuscript/page-109/body.haml
@@ -1,13 +1,11 @@
 %header.tape.flex
-  .chaptername.right Working With Investors
-  .chapter.flex Chapter 7
+  .chaptername.right Marketplace Exits
+  .chapter.flex Chapter 8
 
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 Marketplace Exits
+    %p It’s typically a binary outcome for marketplace start-ups at the beginning: either you figure out the chicken-and-egg problem or you don’t. But, marketplaces can face a binary outcome at the other end too: either you scale your marketplace into a large, stand-alone company that can go public, or you find yourself with few other exit options.
+    %p This reality is quite different than the exit opportunities for SaaS companies. It’s common for SaaS start-ups to be bought by large enterprises for the technology/product. The acquiring company can just plug that product into their existing distribution channel to help round out their current product suite and grab more market share.
+    %p However, in the case of marketplaces, it’s much harder to leverage existing distribution or find synergies between the acquirer and acquired company. A marketplace’s technology/ product is often custom and proprietary, making it tough to replace with existing technology and save costs.
