--- a/manuscript/page-95/body.haml
+++ b/manuscript/page-95/body.haml
@@ -5,4 +5,4 @@
 
 %main.leaf
   .inner.justify
-    %p You can calculate how many visits you get in a given period and how many transactions you get in the same period, i.e. percentage of visiting customers who buy something. Keep in mind that the higher the average selling price of products on your marketplace, the lower the conversion rate may be.
+    %p.push You can calculate how many visits you get in a given period and how many transactions you get in the same period, i.e. percentage of visiting customers who buy something. Keep in mind that the higher the average selling price of products on your marketplace, the lower the conversion rate may be.
