--- a/templates/body.haml
+++ b/templates/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
-  .chapter.flex Chapter 7
-  .chaptername Working With Investors
+  .chapter.flex Chapter 8
+  .chaptername Marketplace Exits
 
 %main.leaf.flex
   .inner.justify
