--- a/manuscript/page-103/body.haml
+++ b/manuscript/page-103/body.haml
@@ -5,9 +5,13 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %img.overlay{src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/mpf.jpg", width: "100%"}
+
+    %label.center.absolute
+      %p.caption 
+        Source: Point Nine Capital and Version One, Available as a  
+        %a{href: "https://docs.google.com/spreadsheets/d/1DaRrcgYXKJIzjgTK_rgGfaRLIU3LTdVTa3kfMEmCCK8/edit#gid=0"} Google Sheet&nbsp;
+        or 
+        %a{href: "http://versionone.vc/wp-content/uploads/2016/07/Marketplace-Napkin.pdf"} Marketplace Napkin.
+
+    
