--- a/manuscript/page-105/body.haml
+++ b/manuscript/page-105/body.haml
@@ -6,9 +6,16 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Taking Etsy as an example, after it went public...
+    %ul
+      %li Consensus estimate of approximately $270M for 2015 revenue
+      %li $2.4B for 2015 GMV
+      %li Take rate of about 11%
+      %li YoY growth for most recent quarter (ending Q1 2015): 45%
+
+    %img.overlay{src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background56.jpg", width: "100%"} 
+    %label.center.absolute
+      %p.caption 
+        Source: Bessemer Venture Partners, SlideShare “Valuations: What is happening and does it matter?”
+
+    
