--- a/manuscript/page-107/body.haml
+++ b/manuscript/page-107/body.haml
@@ -6,9 +6,11 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h3.center SO WHAT ABOUT EARLY-STAGE MARKETPLACES?
+    %p These calculations apply to marketplaces that have already solved the chicken-and- egg problem, reached liquidity, and have become a category leader. But you might be wondering how to value your early-stage marketplace startup.
+    %p Early-stage companies are valued very differently. In this case, metrics don’t count- we’re evaluating the team, idea, and vision. Then as the marketplace starts to scale fast, the multiples are often very high because growth is high as well. But you need to understand that your marketplace will ultimately be valued at 1x GMV.
+    %p If you’re a founder of an early-stage marketplace, you should focus on two things:
+    %ol
+      %li Growing GMV
+      %li Proving out take-rate
+    %p Sometimes we see entrepreneurs who pitch impressive GMV numbers, but haven’t proven that they can ultimately get to a significant take rate. 
