--- a/manuscript/page-108/body.haml
+++ b/manuscript/page-108/body.haml
@@ -2,11 +2,8 @@
   .chapter.flex Chapter 7
   .chaptername Working With Investors
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p.push For example, a marketplace that generates leads instead of being part of the transaction might have a take rate as low as 2-3%. In this case, the GMV needs to be 5x bigger than a comparable marketplace with a 10-15% take rate.
+    %h6
+      %em The bottom line? Don’t wait too long to prove out your monetization.
