--- a/manuscript/page-110/body.haml
+++ b/manuscript/page-110/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 7
-  .chaptername Working With Investors
+  .chapter.flex Chapter 8
+  .chaptername Marketplace Exits
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p It’s also hard to transition buyers and sellers over to the acquirer’s marketplace, as Boris has seen first hand. When Amazon acquired Bibliofind (a competitor to his company AbeBooks) in 1999, they expected to switch all of the Bibliofind sellers over to Amazon. Instead, most of the sellers left the platform and signed up with AbeBooks, giving AbeBooks a huge boost.
+    %p So, if an acquiring company cannot fundamentally change the economics of the marketplace they acquire and if it’s tough to switch over the new buyers and sellers, that leaves little incentive to acquire a marketplace.
+    %p In fact, the only reason you’d ever acquire a marketplace is if it were a large, standalone unit that could grow on its own. eBay was relatively successful when it acquired marketplaces like Rent.com (2005) and StubHub (2007). But, the universe of eBay-like buyers is limited, as is the number of marketplaces that build platforms with several billions of GMV.
+    %p This means that an IPO is the exit option for the most successful marketplaces. Over the past few years, we’ve seen this with Alibaba, Lending Club, and Etsy. And, we will most certainly see this with Airbnb, Uber, and Lyft.
