--- a/manuscript/page-118/style.scss
+++ b/manuscript/page-118/style.scss
@@ -1,5 +1,53 @@
-.bottom {
+html,
+body {
+				max-height: 100%;
+				margin: 0;
+				padding: 0;
+				background-color: #cfdfe4;
+				overflow: hidden;
+				font-size:10vw;
+}
+
+.content {
+	height: 80vh;
+	width: 100vw;
+	background: tomato;
+}
+
+.center {
+	text-align: center;
+	margin: 0 auto;
+}
+
+img {
+    border: 0;
+    -ms-interpolation-mode: bicubic;
+}
+
+.element {
+	width: 33vw;
+}
+
+
+.brand {
+	font-size: 6vw;
+	margin: 0;
+	padding: 0;
+}
+
+footer {
+	height: 20vh;
+	background: white;
 	position: absolute;
 	bottom: 0;
-	left: 0;
+	width: 100vw;
+	display: block;
+	color: black;
+}
+
+.small {
+	font-size: 2vw;
+	font-family: monospace;
+	padding: 0;
+	margin: 0;
 }
