--- a/manuscript/page-7/body.haml
+++ b/manuscript/page-7/body.haml
@@ -10,3 +10,13 @@
     .right
       .subhead.uppercase — Angela Tran Kingyen & Boris Wertz
       .subhead San Francisco, CA - Friday, March 30, 2018 - Seven Leafs
+
+
+
+.copyright
+  %hr
+  %p Pub Date: March 2018. ©2018 Version One Ventures. All rights reserved. All trademarks are the property of their respective owners.
+  %p San Francisco, CA - March 2018. 
+
+
+
