--- a/manuscript/page-118/body.haml
+++ b/manuscript/page-118/body.haml
@@ -1,24 +1,16 @@
 .content.flex
   .center
-    %img{ alt: "symbol", src: "https://raw.githubusercontent.com/marvindanig/i-love-you/master/assets/images/symbol.png", width: "40%"}/
-    %h6.brand Superbooks
-    %p.brand "full of life"
+    %img.circle{ alt: "symbol", src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/end.jpg", width: "50%"}/
+    %h6.brand Second Edition
 %footer.flex
   .element.center.small
+    %img{ src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/versionone.jpg", width: "100%" }/
+
+  .element.center 
     %p.small Vancouver Office
     %p.small boris@versionone.vc @bwertz
-    %hr
+
+  .element.center
     %p.small San Francisco Office
     %p.small angela@versionone.vc @atkingyens
-  .element.center 
-    %img{ src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background65.jpg", width: "100%" }/
-  .element.flex
-    %img{ alt: "qr code", src: "https://raw.githubusercontent.com/marvindanig/i-love-you/master/assets/images/qrcode.jpeg", width: "30%"}/
 
-    
-
-
-  
-
-  
-Pub Date: March 2018. ©2018 Version One Ventures. All rights reserved. All trademarks are the property of their respective owners.
